# StaticPolymorphism

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
client/: CMakeLists.txt  main.cpp
client/include/: Config.h  Encryptor.h  Reader.h  Serializer.h  TCPClient.h  VectorView.h
client/src/: ProgramOptions.cpp  TaskFactory.cpp
common/include/: BaseTemplate.h  Buffer.h  CommandFactory.h  Const.h  Logger.h  ProgramOptions.h  TaskFactory.h
server/: CMakeLists.txt  main.cpp
server/include/: BufferHandler.h  Config.h  Decryptor.h  FileWriter.h  Reader.h  Serializer.h  TCPConnection.h  TCPServer.h
server/src/: CommandFactory.cpp  ProgramOptions.cpp  TaskFactory.cpp
